--- a/HTML/formularios.html
+++ b/HTML/formularios.html
@@ -21,7 +21,7 @@
                 <li><a href="../HTML/audio.html">Audios</a></li> 
                 <li><a href="../HTML/Video.html">Videos</a></li> 
                 <li><a href="../HTML/formularios.html">Formularios</a></li>
-                <li><a href="../HTML/Index.html">Inicio</a></li> 
+                <li><a href="../HTML/index.html">Inicio</a></li> 
             </ul>  
         <main>
 <!DOCTYPE html>
