--- a/HTML/Video.html
+++ b/HTML/Video.html
@@ -21,7 +21,7 @@
                 <li><a href="../HTML/audio.html">Audios</a></li> 
                 <li><a href="../HTML/Video.html">Videos</a></li> 
                 <li><a href="../HTML/formularios.html">Formularios</a></li>
-                <li><a href="../HTML/Index.html">inicio</a></li> 
+                <li><a href="/index.html">Inicio</a></li> 
             </ul> 
     </nav>
     <main class="box_videos">
