--- a/HTML/listas.html
+++ b/HTML/listas.html
@@ -69,7 +69,7 @@
                 <li><a href="../HTML/audio.html">Audios</a></li> 
                 <li><a href="../HTML/Video.html">Videos</a></li> 
                 <li><a href="../HTML/formularios.html">Formularios</a></li>
-                <li><a href="../HTML/index.html">Inicio</a></li> 
+                <li><a href="/index.html">Inicio</a></li> 
             </ul> 
     </nav>
     <main>
