--- a/HTML/Video.html
+++ b/HTML/Video.html
@@ -49,7 +49,7 @@
         <section>
             <h2>Video con poster</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At veniam doloribus fugiat dolores dignissimos itaque optio inventore architecto, consequuntur in pariatur magnam, nihil voluptatibus, quam. Sint assumenda deleniti, molestias, dolor voluptatem debitis. Aliquam, error ratione qui consectetur ea, provident quasi obcaecati. Incidunt asperiores perspiciatis porro cupiditate illo, molitia enim culpa, praesentium molestiae magnam corporis quisquam, nihil obcaecati tenetur similique ex. Harum fugit, quae aliquam. Earum voluptates obcaecati neque pariatur facilis corporis, quas, laboriosam porro, consequuntur praesentium, architectol Unde, consequatur, beatae. Explicabo a nemo quos amet culpa quidem. Architecto impedit, vel earum quos ea odio autem voluptatem modi assumenda recusandae excepturi.</p>
-            <video controls poster="imagenes/Captura%20de%20pantalla%202025-03-08%20112945.png">
+            <video controls poster="../imagenes/Captura%20de%20pantalla%202025-03-08%20112945.png">
                 <source src="../video/263203_tiny.mp4" type="video/mp4">
             </video>
         </section>
